tests/programs/type-errors/impl_bad_method_param.rice
interface Bar {
  fn bloop(Self, int) -> int;
}

struct Foo(int);

impl Bar for Foo {
  fn bloop(self: Self, s: string) -> int { 0 }
}

fn main() { () }